# pynand

./: .cruft.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  makefile  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
changelog/: index.html
contributing/: index.html
docker/: Dockerfile  makefile  run.sh
docs/: macros.py
docs/eps/: ep00.md
docs/include/: ep_header.md
eps/ep00/: index.html
faq/: index.html
include/ep_header/: index.html
search/: search_index.json
src/pynand/: __init__.py  core.py  helpers.py  simulator.py
src/pynand/nand_components/: __init__.py  and_.py  and_bus.py  nand.py  not_.py
src/wirednand/: core.py  nand_components.py  simulator.py
src/wirednand/nand_components/: and_.py  nand.py  not_.py
tags/: index.html
tests/: __init__.py  conftest.py  ruff.toml  test_core.py  test_nand_components.py  test_wire.py
tests/nand_components/: test_and_.py  test_and_bus.py  test_nand.py  test_not_.py
