[tool.poetry]
name = "pynand"
version = "0.1.0"
description = "Logic circuit simulator. Building a computer from NAND gates."
packages = [{ include = "pynand", from = "src" }]
authors = ["guiferviz <guiferviz@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Logic Gates", "Circuits", "Simulation", "NAND Gate"]
repository = "https://github.com/guiferviz/pynand"
classifiers = [
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/guiferviz/pynand/issues"
"Source" = "https://github.com/guiferviz/pynand"
"Documentation" = "https://guiferviz.com/pynand"

[tool.poetry.group.main.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pdbpp = "^0.10.3"

[tool.poetry.group.lint.dependencies]
pre-commit = "^2.18.1"
pyright = "^1.1.376"
ruff = "^0.6.1"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.4.0"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-charts-plugin = "^0.0.8"
mkdocs-macros-plugin = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
"pynand" = "pynand.__main__:main"

[tool.pyright]
include = ["src"]
exclude = []

[tool.coverage.report]
# Regexes for lines to exclude from coverage
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "except ImportError",
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "B",  # flake8-bugbear.
  "I",  # isort.
]
